--- a/usr/local/share/locale/no.UTF8/LC_MESSAGES/pfSense.po
+++ b/usr/local/share/locale/no.UTF8/LC_MESSAGES/pfSense.po
@@ -1,6 +1,6 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Language translation for pfSense project.
+# Copyright (C) 2011 BSD Perimeter
+# This file is distributed under the same license as the pfSense package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
